Updating to fix scaling and spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,8 @@ body {
 }
 
 div.logo {
+    height: 50%;
+    width: 100%;
     min-height: 50%;  /* Fallback for browsers do NOT support vh unit */
     min-height: 50vh; /* These two lines are counted as one :-)       */
     max-height: 50%;
@@ -25,38 +27,32 @@ div.logo {
     text-align: center;
     align-content: center;
 }
-#center_logo {
-  min-height: 50%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 50vh; /* These two lines are counted as one :-)       */
-  max-height: 50%;
-  max-height: 50vh;
-  max-width: 50%;
-  min-width: 50%;
-}
 #logo_image {
-  min-height: 50%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 50vh; /* These two lines are counted as one :-)       */
-  max-height: 60%;
+  margin-top: 50px;
+  min-height: 10%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 10vh; /* These two lines are counted as one :-)       */
+  max-height: 40%;
   max-height: 50vh;
-  max-width: 60%;
-  min-width: 50%;
+  max-width: 40%;
+  min-width: 10%;
 }
 
-ul {
-    text-align: center;
+.main_body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-
-ul li {
-    display: inline;
-    padding: 20px;
-}
-
 #email{
     border: solid 1px #40444D;
     font-size: 10px;
+    margin-top: 5px;
     text-transform: uppercase;
     color: #40444D;
     padding: 3px 5px;
+    max-width: 200px;
     height: 25px;
     background-color: transparent;
     outline: none;
@@ -64,19 +60,27 @@ ul li {
 #btn-style{
     border: solid 1px #212121;
     font-size: 10px;
+    margin-top: 5px;
     letter-spacing: 1px;
     color: #212121;
-
+    max-width: 70px;
     height: 25px;
     background-color: transparent;
     outline: none;
 }
 
 #subscription {
+    margin-top: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-
+#result_label {
+  margin: 0px;
+}
 
 input {
     text-align: center;
@@ -98,21 +102,18 @@ input {
     text-align: center;
 }
 
-.footer_container {
+.icon_container {
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
 }
-li.ui {
-    position: relative;
-    list-style: none;
-    /*vertical-align: middle;*/
-    /*padding-right: 30px;*/
-    /*margin-right: 0px;*/
-}
 
+div.displayMessage {
+  height: 32px;
+  margin: 0px;
+}
 div.icon-only {
   width: 40px;
   height: auto;
@@ -157,8 +158,14 @@ div.icon-only {
 }
 
 .footer {
-    position: relative;
+    position: absolute;
     bottom: 0;
+    width: 100%;
+    display: block;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
     /* Set the fixed height of the footer here */
-    height: 60px;
+    min-height: 10%;
+    height: 20%;
 }
